todoList - GET and POST - ok

--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 
       <nav>
          <div class="search-ctn">
-            <input id="search-input" type="text" name="" value="" placeholder="Search film">
+            <input id="search-input" type="text" name="" value="" placeholder="Add todo">
             <button id="search-btn" type="button" name="button">Search</button>
          </div>
       </nav>
 
       <main>
+         <div id="list">
 
-         
+         </div>
+
 
       </main>
 
