--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav>
          <div class="search-ctn">
             <input id="search-input" type="text" name="" value="" placeholder="Add todo">
-            <button id="search-btn" type="button" name="button">Search</button>
+            <button id="search-btn" type="button" name="button">+</button>
          </div>
       </nav>
 
